package id.ac.polinema;

public interface InterestBearing {
    void applyInterest();
}
